[gd_scene load_steps=14 format=2]

[ext_resource path="res://AssetFiles/0x72_DungeonTilesetII_v1.3.1/frames/masked_orc_run_anim_f2.png" type="Texture" id=1]
[ext_resource path="res://AssetFiles/0x72_DungeonTilesetII_v1.3.1/frames/masked_orc_run_anim_f1.png" type="Texture" id=2]
[ext_resource path="res://AssetFiles/0x72_DungeonTilesetII_v1.3.1/frames/masked_orc_run_anim_f3.png" type="Texture" id=3]
[ext_resource path="res://scripts/enemy.gd" type="Script" id=4]
[ext_resource path="res://AssetFiles/0x72_DungeonTilesetII_v1.3.1/frames/masked_orc_run_anim_f0.png" type="Texture" id=5]
[ext_resource path="res://AssetFiles/0x72_DungeonTilesetII_v1.3.1/frames/masked_orc_idle_anim_f1.png" type="Texture" id=6]
[ext_resource path="res://AssetFiles/0x72_DungeonTilesetII_v1.3.1/frames/masked_orc_idle_anim_f3.png" type="Texture" id=7]
[ext_resource path="res://AssetFiles/0x72_DungeonTilesetII_v1.3.1/frames/masked_orc_idle_anim_f0.png" type="Texture" id=8]
[ext_resource path="res://AssetFiles/0x72_DungeonTilesetII_v1.3.1/frames/masked_orc_idle_anim_f2.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.5733, 6.87952 )

[sub_resource type="CircleShape2D" id=3]
radius = 117.448

[sub_resource type="CapsuleShape2D" id=4]
radius = 8.61658
height = 3.64145

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 332.389, 183.242 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.12247, 0.140305 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Area2DHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DHitBox"]
position = Vector2( 1.26135, 1.05112 )
shape = SubResource( 4 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Area2DHitBox" to="." method="_on_Area2DHitBox_body_entered"]
